--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <br>
         <p>Gender</p>
         <label for="male">Male</label>
-        <input type="radio" name="male" value="make">
+        <input type="radio" name="ab" id="male">
         <label for="female">Female</label>
-        <input type="radio" name="femle">
+        <input type="radio" name="ab" id="female">
         <br>
         <br>
         <label for="age">Age</label>
@@ -51,20 +51,11 @@
         <br>
         <br>
         <label for="SSC passing year">SSC Passing year</label>
-        <input type="number" min="1900" max="2099" step="1" value="2023">
-        <br>
-        <br>
-        <label for="matric passing year">SSC board</label>
-        <br>
-        <br>
-        <label for="sindh">Sindh board</label>
-        <input type="checkbox" name="service" value="Sindh board">
-        <label for="fedral">Fedral board</label>
-        <input type="checkbox" name="service" >
+        <input type="number" min="2000" max="2023" step="1" value="2023">
         <br>
         <br>
         <label for="faculty">Faculty</label>
-        <select name="faculty" id="">
+        <select name="faculty" 
             <option value="Pre medical">Pre medical</option>
             <option value="re engeenring">Pre engeenring</option>
             <option value="computer science">Computer science</option>
@@ -73,7 +64,21 @@
         </select>
         <br>
         <br>
-        <button size="50">Submit</button>
+       <P>Choose any three colleges</P>
+    <input type="checkbox" name="service" id="bamm pechs"><label for="pechs">Bamm PECHS</label>
+    <br>
+    <input type="checkbox"><label for="st">St.Lawrance</label>
+    <br>
+    <input type="checkbox"><label for="womens">Govt.College for women</label>
+    <br>
+    <input type="checkbox"><label for="khatoon">khatoon-e-pakistan</label>
+    <br>
+    <input type="checkbox"><label for="sir syed">Sir syed college</label>
+    <br>
+    <input type="checkbox"><label for="fatima jinnah">Fatima jinnah college</label>
+    <br>
+    <br>
+    <button>Submit</button>
         </form>
     </nav>
 </body>
